tests/NormalTests/paczka1/small_fuzzy/88672881.err
Error in line 1: InN S952 75,2
Error in line 2: InN A107 34,6
Error in line 4: S437 S437 43,2
Error in line 9: S437 A107 44,7
